# beacon

./: .dockerignore  .gitignore  .gitmodules  .local.env  .minio.env  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  QUICKSTART.md  README.md  c17_codes.json  callsign_map.json  codecov.yml  rustfmt.toml  vcpkg.json  ws_sql_test.ipynb
beacon-api/: Cargo.toml
beacon-api/src/: auth.rs  main.rs  otel.rs
beacon-api/src/admin/: check.rs  file.rs  mod.rs  stats.rs  tables.rs
beacon-api/src/auth/: keycloak.rs  mod.rs
beacon-api/src/axum/: admin_datasets_http_tests.rs  auth.rs  auth_http_tests.rs  mod.rs  rbac_http_tests.rs  router.rs
beacon-api/src/client/: datasets.rs  functions.rs  info.rs  mod.rs  query.rs  tables.rs  ws_sql.rs
beacon-arrow-atlas/: Cargo.toml
beacon-arrow-atlas/src/: backend.rs  compat.rs  lib.rs  reader.rs
beacon-arrow-data-table/: Cargo.toml
beacon-arrow-netcdf/: Cargo.toml
beacon-arrow-netcdf-mpio/: Cargo.toml
beacon-arrow-netcdf-mpio/src/: main.rs
beacon-arrow-netcdf/src/: backend.rs  cf_time.rs  chunked_reader.rs  chunked_stream.rs  compat.rs  error.rs  lib.rs  mpio_utils.rs  nc_array.rs  reader.rs  writer.rs
beacon-arrow-netcdf/test_files/: wod_ctd_1964.nc
beacon-arrow-odv/: Cargo.toml
beacon-arrow-odv/src/: error.rs  lib.rs  reader.rs  writer.rs
beacon-arrow-odv/test-data/: test_output.csv
beacon-arrow-store/: Cargo.toml
beacon-arrow-store/src/: writer.rs
beacon-arrow-tiff/: Cargo.toml
beacon-arrow-tiff/src/: backend.rs  compat.rs  lib.rs  metadata.rs  reader.rs
beacon-arrow-tiff/test-files/: synthetic_lzw_stripped_f32.tif
beacon-arrow-zarr/: Cargo.toml
beacon-arrow-zarr/src/: array_slice_pushdown.rs  attributes.rs  backend.rs  compat.rs  data_types.rs  decoder.rs  lib.rs  reader.rs  stream.rs  util.rs
beacon-atlas/: Cargo.toml  README.md  readme.md
beacon-atlas-toolbox/: Cargo.toml
beacon-atlas-toolbox/src/: cli.rs  input.rs  main.rs  partition_inspect.rs  schema_tree.rs
beacon-atlas/src/: _type.rs  array.rs  array_chunked.rs  array_encoding.rs  arrow_dataset.rs  arrow_object_store.rs  attribute.rs  cache.rs  collection.rs  column.rs  column_reader.rs  config.rs  consts.rs  dataset.rs  footer.rs  layout.rs  lib.rs  nd_array.rs  partition.rs  predicate.rs  prelude.rs  pruning.rs  reader.rs  readme.md  rle.rs  scalar.rs  schema.rs  stream.rs  typed_vec.rs  util.rs  variable.rs  writer.rs
beacon-auth/: Cargo.toml
beacon-auth/src/: basic.rs  composite.rs  context.rs  credential.rs  lib.rs  oidc.rs  password.rs  provider.rs  role.rs  sqlite.rs
beacon-binary-format/: Cargo.toml  README.md
beacon-binary-format-toolbox/: Cargo.toml
beacon-binary-format-toolbox/src/: main.rs
beacon-binary-format/benches/: collection_partition.rs  io_cache.rs
beacon-binary-format/src/: array_group.rs  array_partition.rs  array_partition_group.rs  collection.rs  collection_partition.rs  entry_mask.rs  error.rs  io_cache.rs  layout.rs  lib.rs  partition_resolution.rs  stream.rs  util.rs
beacon-binary-format/tests/: integration_write_read_pruning.rs
beacon-common/: Cargo.toml
beacon-common/src/: cf_time.rs  crawler_config.rs  file_descriptors.rs  lib.rs  listing_url.rs  rename_exec_plan.rs  rename_table_provider.rs  schema_sanitizer.rs  schema_table_provider.rs  super_table.rs  super_typing.rs  table_function.rs
beacon-config/: Cargo.toml
beacon-config/src/: error.rs  lib.rs
beacon-core/: Cargo.toml
beacon-core/src/: api.rs  auth_store.rs  dataset_files.rs  dataset_uploads.rs  extensions.rs  lib.rs  metrics.rs  query_job.rs  query_result.rs  runtime.rs  runtime_builder.rs  settings.rs  sys.rs  telemetry.rs  virtual_machine.rs
beacon-core/tests/: auth.rs  crawler_csv.rs  crawler_e2e.rs  crawler_events.rs  crawler_scheduled.rs  crawler_zarr.rs  default_store_cwd.rs  delta_tables.rs  explain_analyze_external_netcdf.rs  explain_analyze_pg_json.rs  external_table_refresh.rs  iceberg_external_tables.rs  iceberg_tables.rs  lance_tables.rs  materialized_view.rs  output_on_non_select.rs  query_output_file.rs  redb_tables.rs  runtime_config.rs  storage_configurability.rs  system_schema.rs  tables_store_lock_release.rs
beacon-data-lake/: Cargo.toml
beacon-data-lake/src/: file_formats.rs  lib.rs  util.rs
beacon-data-lake/tests/: redb_tables.rs
beacon-datafusion-ext/: Cargo.toml
beacon-datafusion-ext/src/: consts.rs  file_collection.rs  format_ext.rs  lib.rs  listing_factory.rs  listing_table_factory_ext.rs  listing_url_resolver.rs  object_store_registry.rs  secrets.rs  stats_cache.rs  table_ext.rs  table_store_ext.rs  type_widening.rs  unique_values.rs
beacon-formats/: Cargo.toml
beacon-formats/src/: arrow.rs  arrow_batches_stream.rs  csv.rs  lib.rs  parquet.rs
beacon-functions/: Cargo.toml  mapped_institutes.csv
beacon-functions/src/: function_doc.rs  lib.rs
beacon-iceberg/: Cargo.toml
beacon-iceberg/src/: alter.rs  catalog.rs  definition.rs  lib.rs  provider.rs  schema_convert.rs
beacon-iceberg/tests/: external_tables.rs
beacon-mcp/: Cargo.toml
beacon-mcp/src/: catalog.rs  lib.rs  result.rs  server.rs
beacon-nd-array/: Cargo.toml  README.md
beacon-nd-array/src/: dataset.rs  datatypes.rs  error.rs  lib.rs  projection.rs
beacon-nd-arrow/: Cargo.toml  README.md
beacon-nd-arrow/benches/: convert.rs  flatten.rs  subset.rs
beacon-nd-arrow/examples/: flatten_stats.rs
beacon-nd-arrow/src/: arrow.rs  batch.rs  broadcast.rs  column.rs  concat.rs  dataset.rs  datatypes.rs  dimensions.rs  error.rs  extension.rs  lib.rs  ndarray_convert.rs  slice.rs  stream.rs  view.rs
beacon-object-storage/: Cargo.toml
beacon-object-storage/src/: config.rs  datasets_store.rs  error.rs  event.rs  fs_event_listener.rs  lib.rs  notified_store.rs  notify.rs  object_cache.rs
beacon-output/: Cargo.toml
beacon-output/src/: csv.rs  geo_arrow.rs  ipc.rs  json.rs  lib.rs  netcdf.rs  odv.rs  parquet.rs
beacon-planner/: Cargo.toml
beacon-planner/src/: authz.rs  lib.rs  metrics.rs  plan.rs
beacon-query/: Cargo.toml
beacon-query/src/: from.rs  lib.rs  output.rs  parser.rs  plan.rs  util.rs
(+1462 files in other folders)
