[workspace]
members = ["beacon-api", "beacon-arrow-netcdf", "beacon-arrow-odv", "beacon-common", "beacon-config", "beacon-core", "beacon-functions", "beacon-tables", "beacon-output", "beacon-query", "beacon-sources"]

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = {version ="0.7.13", features = ["io"]}
futures = "0.3.31"
futures-util = "0.3.31"
async-trait = "0.1.85"
bytes = "1.9.0"
parking_lot = { version = "0.12.3", features = ["send_guard", "serde"] }


utoipa = { version= "=5.3.1", features = ["chrono","preserve_order", "preserve_path_order","rc_schema", "axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }

serde = { version = "=1.0.200", features = ["rc"] }
serde_json = "=1.0.120"
anyhow = "1.0.95"
thiserror = "2.0.12"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

glob = "0.3.2"
tempfile = "3.15.0"
typetag = "0.2.19"
indexmap = "2.7.1"

datafusion = "44.0.0"
object_store = "0.11.2"
arrow = { version = "=53.3.0" }
arrow-schema = { version = "=53.3.0", features = ["serde"] }
