[workspace]
members = ["beacon-api", "beacon-file-formats/beacon-arrow-netcdf", "beacon-file-formats/beacon-arrow-odv", "beacon-common", "beacon-config", "beacon-core", "beacon-functions", "beacon-data-lake", "beacon-sql-databases", "beacon-file-formats/beacon-delta", "beacon-file-formats/beacon-arrow-zarr", "beacon-file-formats/beacon-binary-format", "beacon-object-storage", "beacon-file-formats/beacon-nd-arrow", "beacon-datafusion-ext", "beacon-file-formats/beacon-iceberg", "beacon-file-formats/beacon-nd-array", "beacon-file-formats/beacon-arrow-tiff", "beacon-file-formats/beacon-arrow-atlas", "beacon-file-formats/beacon-arrow-geoparquet", "beacon-file-formats/beacon-arrow-bbf", "beacon-file-formats/beacon-arrow-ipc", "beacon-file-formats/beacon-arrow-csv", "beacon-file-formats/beacon-arrow-parquet"]
exclude = ["beacon-file-formats/beacon-binary-format-toolbox"]

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = {version ="0.7.13", features = ["io"]}
futures = "0.3.31"
futures-util = "0.3.31"
async-trait = "0.1.88"
bytes = "1.10.0"
flume = { version = "0.11.1", features = ["async"] }
parking_lot = { version = "0.12.3", features = ["send_guard", "serde"] }
ordered-float = { version = "5.1.0", features = ["serde"] }
num_cpus = "1.17.0"

utoipa = { version= "=5.3.1", features = ["chrono","preserve_order", "preserve_path_order","rc_schema", "axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }

serde = { version = "^1.0.2", features = ["rc", "derive"] }
serde_json = "1.0.145"
anyhow = "1.0.95"
thiserror = "2.0.12"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.4"
tracing-test = { version = "0.2.5", features = ["no-env-filter"]}
glob = "0.3.2"
tempfile = "3.15.0"
typetag = "0.2.19"
indexmap = { version = "2.7.1", features = ["serde"]}
chrono = { version = "0.4.41", features = ["serde"] }
crossbeam = "0.8.4"
moka = { version = "0.12.10", features = ["future", "sync"] }
lru = "0.16.2"
once_cell = "1.21.3"
lazy_static = "1.5.0"
base64 = "0.22"
bloomfilter = { version = "1", features = ["serde"] }
bincode = "1"

# Delta Lake support. 0.32.x pins datafusion 53 / arrow 58 / object_store 0.13,
# matching our versions. We keep default features (`rustls`, required by the
# delta-kernel default engine) and add `datafusion`, but do NOT enable the cloud
# backends (`s3`/`azure`/`gcs`): Beacon injects its own object store
# (DatasetsStore) so S3/local both reach Delta through that.
deltalake = { version = "=0.32.4", features = ["datafusion"] }
datafusion = "^53"
# Pinned exactly: 0.5.3 is the release whose `datafusion` dep resolves to ^53
# (matching our 53.1.0). Its `sql` feature gates the SQLExecutor/SQLTableSource
# types used by the federated remote-table provider.
datafusion-federation = { version = "=0.5.3", features = ["sql"] }
# External SQL-database table providers (Postgres/MySQL). 0.11.0 is the release
# whose `datafusion` dep resolves to ^53 and `datafusion-federation` to 0.5.3,
# matching ours. No default features; each engine is opt-in via a beacon-side
# feature that enables the matching `<engine>-federation` feature (pushdown).
datafusion-table-providers = { version = "=0.11.0", default-features = false }
geodatafusion = "0.4.0"
object_store = { version = "0.13.1", features = ["aws"] }
tonic = "0.14.1"

iceberg-rust = "0.10"
datafusion_iceberg = "0.10"
iceberg-file-catalog = "0.10"

arrow = { version = "^58", features = ["prettyprint"]}
arrow-schema = { version = "^58", features = ["serde"] }
arrow-ipc = { version = "^58", features = ["zstd"] }
arrow-flight = { version = "^58" }
parquet = { version = "^58", features = ["async"] }
geoarrow = "^0.8"
geoarrow-array = "^0.8"
geoarrow-schema = "^0.8"
geoparquet = "^0.8"

beacon-nd-arrow = { path = "beacon-file-formats/beacon-nd-arrow" }
