[workspace]
# Edition-2024 members imply resolver 3; set it explicitly so features aren't
# over-unified across normal/build/dev deps (fewer features compiled).
resolver = "3"
members = ["beacon-api", "beacon-file-formats/beacon-arrow-netcdf", "beacon-file-formats/beacon-arrow-odv", "beacon-common", "beacon-config", "beacon-core", "beacon-functions", "beacon-data-lake", "beacon-sql-databases", "beacon-file-formats/beacon-delta", "beacon-file-formats/beacon-arrow-zarr", "beacon-file-formats/beacon-binary-format", "beacon-object-storage", "beacon-file-formats/beacon-nd-arrow", "beacon-datafusion-ext", "beacon-file-formats/beacon-iceberg", "beacon-file-formats/beacon-lance", "beacon-file-formats/beacon-nd-array", "beacon-file-formats/beacon-arrow-tiff", "beacon-file-formats/beacon-arrow-atlas", "beacon-file-formats/beacon-arrow-geoparquet", "beacon-file-formats/beacon-arrow-bbf", "beacon-file-formats/beacon-arrow-ipc", "beacon-file-formats/beacon-arrow-csv", "beacon-file-formats/beacon-arrow-parquet"]
exclude = ["beacon-file-formats/beacon-binary-format-toolbox"]

[workspace.dependencies]
tokio = {version = "1.47.1", features = ["full"]}
tokio-util = {version = "0.7.13", features = ["io"]}
futures = "0.3.31"
futures-util = "0.3.31"
async-trait = "0.1.88"
bytes = "1.10.0"
flume = {version = "0.11.1", features = ["async"]}
parking_lot = {version = "0.12.3", features = ["send_guard", "serde"]}
ordered-float = {version = "5.1.0", features = ["serde"]}
num_cpus = "1.17.0"

utoipa = { version= "=5.3.1", features = ["chrono","preserve_order", "preserve_path_order","rc_schema", "axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }

serde = { version = "^1.0.2", features = ["rc", "derive"] }
serde_json = "1.0.145"
anyhow = "1.0.95"
thiserror = "2.0.12"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.4"
tracing-test = { version = "0.2.5", features = ["no-env-filter"]}
glob = "0.3.2"
tempfile = "3.15.0"
typetag = "0.2.19"
indexmap = {version = "2.7.1", features = ["serde"]}
chrono = { version = "0.4.41", features = ["serde"] }
crossbeam = "0.8.4"
moka = {version = "0.12.10", features = ["future", "sync"]}
lru = "0.14.0"
once_cell = "1.21.3"
lazy_static = "1.5.0"
base64 = "0.22"
bloomfilter = { version = "1", features = ["serde"] }
bincode = "1"

# Delta Lake support. 0.32.x pins datafusion 53 / arrow 58 / object_store 0.13,
# matching our versions. We keep default features (`rustls`, required by the
# delta-kernel default engine) and add `datafusion`, but do NOT enable the cloud
# backends (`s3`/`azure`/`gcs`): Beacon injects its own object store
# (DatasetsStore) so S3/local both reach Delta through that.
deltalake = { version = "=0.32.4", features = ["datafusion"] }
datafusion = "^53"
# Pinned exactly: 0.5.3 is the release whose `datafusion` dep resolves to ^53
# (matching our 53.1.0). Its `sql` feature gates the SQLExecutor/SQLTableSource
# types used by the federated remote-table provider.
datafusion-federation = { version = "=0.5.3", features = ["sql"] }
# External SQL-database table providers (Postgres/MySQL). 0.11.0 is the release
# whose `datafusion` dep resolves to ^53 and `datafusion-federation` to 0.5.3,
# matching ours. No default features; each engine is opt-in via a beacon-side
# feature that enables the matching `<engine>-federation` feature (pushdown).
datafusion-table-providers = { version = "=0.11.0", default-features = false }
geodatafusion = "0.4.0"
object_store = { version = "0.13.1", features = ["aws"] }
tonic = "0.14.1"

iceberg-rust = "0.10"
datafusion_iceberg = "0.10"
iceberg-file-catalog = "0.10"

# Lance managed-table engine. 7.0.0 pins arrow 58 / datafusion 53 / object_store
# 0.13, matching our versions. Provides `lance::datafusion::LanceTableProvider`
# plus the `Dataset` write/append/delete API used by beacon-lance. Requires
# `protoc` at build time (Lance generates protobuf in its build script).
#
# default-features = false drops the bundled cloud backends (aws/azure/gcp/oss/
# tencent/huggingface SDKs + the aws-config/aws-smithy stack) and `geo`: beacon
# routes Lance through its own injected object store via a custom
# `beacon-tables://` scheme, so Lance's native cloud schemes are never used.
lance = { version = "=7.0.0", default-features = false }
# Lance index types (IndexType, ScalarIndexParams) for managed-table indexing.
# Version-locked to `lance` so the shared types are a single compilation.
lance-index = "=7.0.0"
# Lance IO + core: the ObjectStoreProvider/ObjectStoreRegistry mechanism used to
# route Lance through beacon's tables object store. Version-locked to `lance`.
# Cloud backends disabled (see `lance` above) — the registry mechanism beacon
# uses lives in core lance-io, not behind the aws/azure/gcp features.
lance-io = { version = "=7.0.0", default-features = false }
lance-core = "=7.0.0"

arrow = { version = "^58", features = ["prettyprint"]}
arrow-schema = { version = "^58", features = ["serde"] }
arrow-ipc = { version = "^58", features = ["zstd"] }
arrow-flight = { version = "^58" }
parquet = { version = "^58", features = ["async"] }
geoarrow = "^0.8"
geoarrow-array = "^0.8"
geoarrow-schema = "^0.8"
geoparquet = "^0.8"

beacon-nd-arrow = { path = "beacon-file-formats/beacon-nd-arrow" }

arrow-csv = "^58"
async-stream = "0.3.6"
async-tiff = {version = "0.3.0", default-features = false}
async_zip = {version = "0.0.18", features = ["deflate", "tokio", "zstd"]}
axum = {version = "0.8.1", features = ["multipart", "tracing", "ws"]}
axum-streams = {version = "0.25.0", features = ["arrow"]}
bytemuck = {version = "1.25.0", features = ["derive"]}
byteorder = "1.5.0"
cast = "0.3.0"
chacha20poly1305 = "0.10"
csv = "1.3.1"
envconfig = "0.11.0"
geo = "0.31"
geojson = "0.24.2"
gsw = "0.2.2"
hifitime = "4.0.2"
julian = "0.7.1"
lz4_flex = "0.11"
lzzzz = "2.0.0"
ndarray = "0.17.1"
notify = {version = "8.2.0", features = ["flume"]}
num-traits = "0.2.19"
pprof = {version = "0.15", features = ["flamegraph"]}
prost = "0.14.1"
radix_trie = "0.3.0"
regex = "1.11.1"
rkyv = {version = "=0.8.10", features = ["bytes-1", "indexmap-2", "pointer_width_64", "smol_str-0_3"]}
rlimit = "0.11.0"
rmp-serde = "1"
secrecy = "0.10"
smol_str = {version = "0.3.4", features = ["serde"]}
strsim = "0.11.1"
sysinfo = {version = "0.35.2", features = ["serde"]}
tikv-jemallocator = "0.6.0"
tower-http = {version = "0.6.1", features = ["cors", "fs", "trace"]}
tracing-panic = "0.1"
url = "2.5.4"
uuid = "1.16.0"
walkdir = "2.5.0"
wkt = {version = "0.12.0", features = ["geo-types"]}
zarrs = {version = "0.23.12", features = ["async"]}
zarrs_object_store = "0.6.0"
zarrs_storage = "0.4.2"
zip = {version = "2.2.3", default-features = false, features = ["deflate"]}
zstd = "0.13.2"

# Build profiles tuned for compile time and on-disk footprint. Cargo defaults
# emit full DWARF for the entire graph, which dominated both `target/` size and
# link time. `line-tables-only` keeps usable backtraces; dependencies get no
# debuginfo at all (we never step into them).
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
debug = false

# Tests/benches inherit dev but spell out the dep override so `cargo test`
# artifacts stay small too.
[profile.test.package."*"]
debug = false
