[package]
name = "beacon-api"
version = "1.5.4"
edition = "2021"

[target.'cfg(not(windows))'.dependencies]
tikv-jemallocator = "0.6.0"
pprof = { version = "0.15", features = ["flamegraph"] }

[dependencies]
axum = { version = "0.8.1", features = ["tracing", "multipart", "ws"] }
axum-streams = { version = "0.23.1", features = ["arrow"]}
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
base64 = "0.22.1"

futures = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }

utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-scalar = { workspace = true }
utoipa-swagger-ui = { workspace = true }
tokio = { workspace = true}
tokio-util = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}
anyhow = { workspace = true}
arrow = { workspace = true}
arrow-schema = { workspace = true}
uuid = { version = "1.16.0" }
tracing = { workspace = true}
tracing-subscriber = { workspace = true}
tracing-appender = { workspace = true}
opentelemetry = { version = "0.27.1" }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.27.0", features = ["trace", "metrics", "grpc-tonic"] }
tracing-opentelemetry = "0.28.0"
sysinfo = { version = "0.35.2", features = ["serde"] }

# Local dependencies
beacon-config = { path = "../beacon-config" }
beacon-core = { path = "../beacon-core" }
beacon-query = { path = "../beacon-query" }
beacon-planner = { path = "../beacon-planner" }
beacon-functions = { path = "../beacon-functions" }
beacon-formats = { path = "../beacon-formats" }
beacon-data-lake = { path = "../beacon-data-lake" }
beacon-datafusion-ext = { path = "../beacon-datafusion-ext" }