[package]
name = "beacon-api"
version = "1.5.4"
edition = "2021"

[target.'cfg(not(windows))'.dependencies]
tikv-jemallocator = "0.6.0"
pprof = { version = "0.15", features = ["flamegraph"] }

[dependencies]
axum = { version = "0.8.1", features = ["tracing", "multipart", "ws"] }
axum-streams = { version = "0.23.1", features = ["arrow"]}
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
base64 = "0.22.1"

futures = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
arrow-flight = { workspace = true, features = ["flight-sql"] }
arrow-ipc = { workspace = true }

utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-scalar = { workspace = true }
utoipa-swagger-ui = { workspace = true }
tokio = { workspace = true}
tokio-util = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}
anyhow = { workspace = true}
arrow = { workspace = true}
uuid = { version = "1.16.0" }
tracing = { workspace = true}
tracing-subscriber = { workspace = true}
tracing-appender = { workspace = true}
tonic = "0.13.1"
prost = "0.13.1"

# Local dependencies
beacon-config = { path = "../beacon-config" }
beacon-core = { path = "../beacon-core" }