[package]
name = "beacon-api"
version = "1.8.0"
edition = "2021"

[target.'cfg(not(windows))'.dependencies]
# jemalloc is a production allocator; building its C source costs ~23s. Gate it
# behind a non-default feature so dev/CI builds skip it. Release images enable
# it via `cargo build --release -p beacon-api --features jemalloc` (see Dockerfile).
tikv-jemallocator = {workspace = true, optional = true}
pprof = {workspace = true}

[features]
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]
axum = {workspace = true}
axum-streams = {workspace = true}
tower-http = {workspace = true}
base64 = {workspace = true}

futures = { workspace = true }
bytes = { workspace = true }
arrow-flight = { workspace = true, features = ["flight-sql"] }
arrow-ipc = { workspace = true }

utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-scalar = { workspace = true }
utoipa-swagger-ui = { workspace = true }
tokio = { workspace = true}
tokio-util = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}
anyhow = { workspace = true}
arrow = { workspace = true}
uuid = {workspace = true}
tracing = { workspace = true}
tracing-subscriber = { workspace = true}
tracing-appender = { workspace = true}
tracing-panic = {workspace = true}
tonic = {workspace = true}
prost = {workspace = true}

# Local dependencies
beacon-config = { path = "../beacon-config" }
beacon-core = { path = "../beacon-core" }

[dev-dependencies]
# Enable beacon-core's test-only helper (ephemeral in-memory auth runtime) for the
# Flight SQL integration tests so they don't contend on the shared SQLite directory.
beacon-core = { path = "../beacon-core", features = ["test-util"] }
# `tower::ServiceExt::oneshot` for driving the axum router in the HTTP auth tests.
tower = { version = "0.5", features = ["util"] }
# Temp storage roots for the admin dataset file-management HTTP tests.
tempfile = { workspace = true }