[package]
name = "beacon-arrow-netcdf-mpio"
version = "1.5.4"
edition = "2024"

[dependencies]

tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
arrow = { workspace = true }

beacon-arrow-netcdf = { path = "../beacon-arrow-netcdf" }

[[bin]]
name = "beacon-arrow-netcdf-mpio"
path = "src/main.rs"