[package]
name = "beacon-arrow-netcdf"
version = "1.5.4"
edition = "2021"

[dependencies]
netcdf = { git ="https://github.com/robinskil/netcdf.git", features = ["ndarray"], version = "0.11.1"}
netcdf-sys = { git ="https://github.com/robinskil/netcdf.git", package = "netcdf-sys" }
arrow = { workspace = true }
arrow-schema = { workspace = true }
anyhow = { workspace=true }
tempfile = { workspace=true}
futures = { workspace=true }
indexmap = { workspace=true }
thiserror = { workspace=true }
async-trait = { workspace=true }
ndarray = "0.17.1"
hifitime = "4.0.2"
regex = "1.11.1"
num-traits = "0.2.19"
tracing = { workspace = true }
serde = { workspace = true }

beacon-nd-arrow = {path = "../beacon-nd-arrow"}
