[package]
name = "beacon-arrow-odv"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace=true}
tokio = { workspace = true }
indexmap = { workspace = true }
arrow = { workspace=true}
arrow-csv = "53.3.0"
anyhow = { workspace=true}
async-trait = { workspace=true}
futures = { workspace=true}
futures-util = { workspace=true}
tempfile = { workspace=true}
utoipa = { workspace=true}
csv = "1.3.1"
tar = "0.4.44"
zstd = "0.13.3"
zip = "2.2.3"
walkdir = "2.5.0"
regex = "1.11.1"
quick-xml = "0.37.2"