[package]
name = "beacon-arrow-odv"
version = "1.7.2"
edition = "2021"

[dependencies]
serde = { workspace=true}
tokio = { workspace = true }
indexmap = { workspace = true }
arrow = { workspace=true}
arrow-csv = "^58"
datafusion = { workspace = true }
tracing = { workspace = true }
beacon-common = { path = "../beacon-common" }
anyhow = { workspace=true}
async-trait = { workspace=true}
futures = { workspace=true}
futures-util = { workspace=true}
tempfile = { workspace=true}
utoipa = { workspace=true}
csv = "1.3.1"
tar = "0.4.44"
zstd = "0.13.3"
lz4_flex = "0.11.3"
# default-features disabled to drop xz/lzma support (xz2 -> lzma-sys conflicts with
# datafusion 53's liblzma on the native `lzma` links). Only deflate is used.
zip = { version = "2.2.3", default-features = false, features = ["deflate"] }
async_zip = { version = "0.0.18", features = ["tokio", "zstd", "deflate"] }
tokio-util = "0.7.16"
walkdir = "2.5.0"
regex = "1.11.1"
quick-xml = "0.37.2"
thiserror = {workspace=true}
bytes = { workspace = true}
object_store = { workspace = true}