[package]
name = "beacon-arrow-zarr"
version = "1.6.0"
edition = "2024"

[dependencies]
zarrs = {"version" = "0.23.12", features = ["async"]}
# zarrs_object_store stays on 0.5.x: 0.6.x requires object_store ^0.13 but
# the workspace pins object_store 0.12.x. Both 0.5.x and 0.6.x share
# zarrs_storage 0.4.x so the trait composition with zarrs 0.23 still works.
zarrs_object_store = "0.5.0"
zarrs_storage = "0.4.2"
object_store = { workspace = true }
tokio = { workspace = true }
arrow = { workspace = true }
datafusion = { workspace = true }
ndarray = "0.17"
anyhow = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }
hifitime = "4.0.2"
regex = "1.11.1"
futures = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }

beacon-nd-array = { path = "../beacon-nd-array" }
beacon-datafusion-ext = { path = "../beacon-datafusion-ext" }
beacon-common = { path = "../beacon-common" }

[dev-dependencies]
tempfile = { workspace = true }