[package]
name = "beacon-atlas-toolbox"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.5", features = ["derive", "env"] }
arrow = { workspace = true }
arrow-ipc = { workspace = true, features = ["zstd"] }
parquet = { workspace = true, features = ["async"] }
tokio = { workspace = true }
futures ={ workspace = true }
glob = "0.3"
anyhow = { workspace = true }
serde_json = { workspace = true }
object_store = { workspace = true, features = ["aws"] }

beacon-arrow-netcdf = { path = "../beacon-arrow-netcdf" }
beacon-atlas = { path = "../beacon-atlas" }
beacon-nd-arrow = { path = "../beacon-nd-arrow" }