[package]
name = "beacon-atlas"
version = "0.1.0"
edition = "2024"

[dependencies]

object_store = { workspace = true }
tokio = { workspace = true }
arrow = { workspace = true }
anyhow = { workspace = true }   
tempfile = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
moka = { workspace = true }
bloomfilter = { workspace = true }
bincode = { workspace = true }
datafusion = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
once_cell = { workspace = true }

beacon-nd-arrow = { path = "../beacon-nd-arrow" }
