[package]
name = "beacon-binary-format-toolbox"
version = "2.2.0"
edition = "2024"

[dependencies]
clap = {version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
byte-unit = "5"
glob = "0.3"
beacon-binary-format = { path = "../beacon-binary-format" }
beacon-arrow-netcdf = { path = "../beacon-arrow-netcdf" }
beacon-nd-array = { path = "../beacon-nd-array" }
arrow = { version = "^58.0.0", features = ["ipc", "prettyprint"] }
arrow-ipc = { version = "^58.0.0", features = ["zstd"]}
parquet = "^58.0.0"
tokio = { version = "1.47.0", features = ["full"] }
regex = "1.11.2"
futures = "0.3.31"