[package]
name = "beacon-binary-format"
version = "1.5.0"
edition = "2024"

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true }
parquet = { workspace = true }
object_store = { workspace = true }
tokio = { workspace = true }
nd-arrow-array = { git = "https://github.com/maris-development/nd-arrow-array.git", branch = "main", version = "1.3.0"}

serde = { workspace = true }
indexmap = { workspace = true }


arrow-ipc = { version = "^56.0.0", features = ["zstd"] }
thiserror = "2.0.12"
tempfile = "3.19.1"
hmac-sha256 = "1.1.12"
sha256 = "1.6.0"
moka = { version = "0.12.10", features = ["future"] }

[dev-dependencies]
serde_json = { workspace = true }
