[package]
name = "beacon-common"
version = "1.4.0"
edition = "2021"

[dependencies]
arrow = { workspace=true }
datafusion = {workspace = true}
anyhow = { workspace=true }
indexmap = { workspace = true }
thiserror = { workspace=true }
async-trait = { workspace=true }
async-stream = "0.3.6"
regex = "1.11.1"
glob = "0.3.3"
url = "2.5.4"
object_store = { version = "0.12.3", features = ["aws"] }

futures = { workspace=true}
futures-util = { workspace=true}
tracing = { workspace = true }