[package]
name = "beacon-common"
version = "1.7.2"
edition = "2021"

[dependencies]
arrow = { workspace=true }
datafusion = {workspace = true}
anyhow = { workspace=true }
indexmap = { workspace = true }
thiserror = { workspace=true }
async-trait = { workspace=true }
async-stream = "0.3.6"
regex = "1.11.1"
glob = "0.3.3"
url = "2.5.4"
julian = "0.7.1"
hifitime = "4.0.2"
chrono = { workspace = true }
object_store = { workspace = true }

futures = { workspace=true}
futures-util = { workspace=true}
tracing = { workspace = true }
rlimit = "0.11.0"