[package]
name = "beacon-common"
version = "1.7.3"
edition = "2021"

[dependencies]
arrow = { workspace=true }
datafusion = {workspace = true}
indexmap = { workspace = true }
thiserror = { workspace=true }
async-trait = { workspace=true }
regex = {workspace = true}
glob = {workspace = true}
url = {workspace = true}
julian = {workspace = true}
hifitime = {workspace = true}

futures = { workspace=true}
tracing = { workspace = true }
rlimit = {workspace = true}