[package]
name = "beacon-config"
version = "1.7.3"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
envconfig = "0.11.0"
object_store = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }

# Per-format and storage config types are owned by their crates; beacon-config
# composes them and fills them from the environment.
beacon-object-storage = { path = "../beacon-object-storage" }
beacon-arrow-netcdf = { path = "../beacon-file-formats/beacon-arrow-netcdf" }
beacon-arrow-atlas = { path = "../beacon-file-formats/beacon-arrow-atlas" }
beacon-arrow-bbf = { path = "../beacon-file-formats/beacon-arrow-bbf" }